; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_mmgr.c_HPDF_FreeMem.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_mmgr.c_HPDF_FreeMem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 (i8*)*, i32 }

@.str = private unnamed_addr constant [19 x i8] c"-%p mmgr-free-mem\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HPDF_FreeMem(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %22

8:                                                ; preds = %2
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %21, label %13

13:                                               ; preds = %8
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @HPDF_PTRACE(i8* %14)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32 (i8*)*, i32 (i8*)** %17, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 %18(i8* %19)
  br label %21

21:                                               ; preds = %13, %8
  br label %22

22:                                               ; preds = %21, %7
  ret void
}

declare dso_local i32 @HPDF_PTRACE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
